# rust-stl

./: .gitignore  AGENTS.md  Cargo.toml
.cargo/: config.toml
.github/workflows/: coverage.yml
crates/collection/: Cargo.toml  README.md
crates/collection/benches/: observable_common.rs
crates/collection/src/: collection.rs  dispose.rs  lib.rs  observable.rs
crates/dinic/: Cargo.toml  README.md
crates/dinic/benches/: dinic_common.rs  dinic_matrix.rs
crates/dinic/src/: dinic.rs  error.rs  lib.rs  prelude.rs  traits.rs
crates/history/: Cargo.toml  README.md
crates/history/benches/: history_common.rs
crates/history/src/: error.rs  history.rs  lib.rs  prelude.rs  traits.rs
crates/isap/: Cargo.toml  README.md
crates/isap/benches/: isap_common.rs  isap_matrix.rs
crates/isap/src/: error.rs  isap.rs  lib.rs  prelude.rs  traits.rs
crates/manacher/: Cargo.toml  README.md
crates/manacher/benches/: manacher_common.rs
crates/manacher/src/: lib.rs  manacher.rs  prelude.rs
crates/mcmf/: Cargo.toml  README.md
crates/mcmf/benches/: mcmf_common.rs
crates/mcmf/src/: error.rs  lib.rs  mcmf.rs  prelude.rs  traits.rs
crates/permutation/: Cargo.toml  README.md
crates/permutation/benches/: permutation_common.rs
crates/permutation/src/: lib.rs  permutation.rs  prelude.rs
crates/queue/: Cargo.toml  README.md
crates/queue/benches/: queue_common.rs
crates/queue/src/: circular_queue.rs  error.rs  lib.rs  linked_deque.rs  prelude.rs  priority_queue.rs  traits.rs
crates/shuffle/: Cargo.toml  README.md
crates/shuffle/benches/: shuffle_common.rs
crates/shuffle/src/: knuth.rs  lib.rs  prelude.rs  util.rs
crates/stack/: Cargo.toml  README.md
crates/stack/benches/: stack_common.rs
crates/stack/src/: circular_stack.rs  error.rs  lib.rs  prelude.rs  traits.rs
crates/trie/: Cargo.toml  README.md
crates/trie/benches/: trie_common.rs
crates/trie/src/: error.rs  lib.rs  prelude.rs  trie.rs  util.rs
scripts/: check_circular_queue_coverage.sh  publish.sh  release.sh
scripts/publish-cli/: Cargo.toml
scripts/publish-cli/src/: main.rs
spec/collection/: observable.md
