[package]
name = "rstl-collection"
version = "0.1.0"
edition = "2024"
description = "Core collection and disposable traits for rstl crates"
repository = "https://github.com/guanghechen/rust-stl"
homepage = "https://github.com/guanghechen/rust-stl/tree/main/crates/collection#readme"
documentation = "https://docs.rs/rstl-collection"
readme = "README.md"

[dependencies]
