[package]
name = "rstl-dinic"
version = "0.1.2"
edition = "2024"
description = "Dinic max-flow algorithm for rstl crates"
license = "MIT"
repository = "https://github.com/guanghechen/rust-stl"
homepage = "https://github.com/guanghechen/rust-stl/tree/main/crates/dinic#readme"
documentation = "https://docs.rs/rstl-dinic"
readme = "README.md"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dinic_common"
harness = false

[[bench]]
name = "dinic_matrix"
harness = false
