[package]
name = "rstl-isap"
version = "0.1.1"
edition = "2024"
description = "ISAP max-flow algorithm for rstl crates"
license = "MIT"
repository = "https://github.com/guanghechen/rust-stl"
homepage = "https://github.com/guanghechen/rust-stl/tree/main/crates/isap#readme"
documentation = "https://docs.rs/rstl-isap"
readme = "README.md"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "isap_common"
harness = false

[[bench]]
name = "isap_matrix"
harness = false
