[package]
name = "rstl-manacher"
version = "0.1.0"
edition = "2024"
description = "Manacher algorithm for rstl crates"
license = "MIT"
repository = "https://github.com/guanghechen/rust-stl"
homepage = "https://github.com/guanghechen/rust-stl/tree/main/crates/manacher#readme"
documentation = "https://docs.rs/rstl-manacher"
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "manacher_common"
harness = false
