[package]
name = "rstl-permutation"
version = "0.1.1"
edition = "2024"
description = "Permutation algorithms for rstl crates"
license = "MIT"
repository = "https://github.com/guanghechen/rust-stl"
homepage = "https://github.com/guanghechen/rust-stl/tree/main/crates/permutation#readme"
documentation = "https://docs.rs/rstl-permutation"
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "permutation_common"
harness = false
