[package]
name = "rstl-queue"
version = "0.1.1"
edition = "2024"
description = "Queue data structures for rstl crates"
license = "MIT"
repository = "https://github.com/guanghechen/rust-stl"
homepage = "https://github.com/guanghechen/rust-stl/tree/main/crates/queue#readme"
documentation = "https://docs.rs/rstl-queue"
readme = "README.md"

[dependencies]
collection = { package = "rstl-collection", version = "0.1.1", path = "../collection" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "queue_common"
harness = false
