[package]
name = "rstl-trie"
version = "0.1.0"
edition = "2024"
description = "Generic trie data structure for rstl crates"
license = "MIT"
repository = "https://github.com/guanghechen/rust-stl"
homepage = "https://github.com/guanghechen/rust-stl/tree/main/crates/trie#readme"
documentation = "https://docs.rs/rstl-trie"
readme = "README.md"

[dependencies]
collection = { package = "rstl-collection", version = "0.1.1", path = "../collection" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "trie_common"
harness = false
